testsuite/tests/patsyn/should_fail/T15289.stderr

T15289.hs:5:16: error:
    • Couldn't match expected type ‘Maybe’ with actual type ‘Bool’
    • In the pattern: True
      In the pattern: True :: Maybe
      In the declaration for pattern synonym ‘What’

T15289.hs:5:24: error:
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type ‘Maybe’
      In a pattern type signature: Maybe
      In the pattern: True :: Maybe
